# Mon-Projet-Python

./: .gitmodules  README.md  mylibrary_packages.txt  pyproject.toml
backtests/: AmberDolphinChef.csv  AmberFalconScientist.csv  AmberGorillaFirefighter.csv  AmberHawkArchitect.csv  AmberJaguarPlumber.csv  AmberLynxChef.csv  AmberTigerAstronaut.csv  BlackCheetahFirefighter.csv  BlackFoxLawyer.csv  BlackHorseBlacksmith.csv  BlackJaguarNurse.csv  BlackPantherScientist.csv  BlackWolfFarmer.csv  BlueGorillaPhotographer.csv  BrownTigerArchitect.csv  CrimsonEagleTailor.csv  CrimsonGorillaCarpenter.csv  CrimsonSharkNurse.csv  CrimsonWolfBlacksmith.csv  GoldDolphinMechanic.csv  GoldEagleCarpenter.csv  GoldFoxArchitect.csv  GoldSharkFirefighter.csv  GoldSharkScientist.csv  GreyLynxCarpenter.csv  GreySharkFarmer.csv  IndigoCobraPhotographer.csv  IndigoHawkBlacksmith.csv  IndigoWolfArchitect.csv  MagentaDolphinArchitect.csv  PinkCheetahBlacksmith.csv  PinkCheetahDoctor.csv  PinkEagleSoldier.csv  PinkLionTailor.csv  PinkLynxEngineer.csv  PinkOwlTeacher.csv  PinkSharkEngineer.csv  PurpleEagleBlacksmith.csv  PurpleElephantScientist.csv  PurpleGorillaFirefighter.csv  (+22 more)
blockchain/: backtest.pkl
python_project/: CHANGELOG.md  README.md  pyproject.toml
python_project/docs/: conf.py
python_project/src/python_project/: python_project.py
src/python_project/: python_project.py
