[tool.poetry]
name = "python_project"
version = "0.1.0"
description = "A package that uses pybacktest"
authors = ["Reda El Fassi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pybacktestchain = "^0.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
