[tool.poetry]
name = "python_project"
version = "0.1.0"
description = "A package that uses pybacktest"
authors = ["Reda El Fassi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
